--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activity.HomeActivity">
@@ -35,27 +35,28 @@
                 android:textColor="#293041"
                 android:textFontWeight="400"
                 android:textSize="@dimen/_10sdp"
-                app:layout_constraintBottom_toTopOf="@+id/user"
+                app:layout_constraintBottom_toTopOf="@+id/userName"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:ignore="HardcodedText,MissingConstraints,RtlHardcoded,UnusedAttribute" />
 
-            <TextView
-                android:id="@+id/user"
+            <Button
+                android:id="@+id/userName"
                 android:layout_width="@dimen/_94sdp"
                 android:layout_height="@dimen/_28sdp"
+                android:backgroundTint="@color/white"
                 android:layout_marginStart="@dimen/_22sdp"
                 android:layout_marginTop="@dimen/_20sdp"
                 android:fontFamily="@font/poppins"
-                android:text=""
                 android:textAlignment="gravity"
                 android:textColor="@color/black"
                 android:textFontWeight="900"
-                android:textSize="@dimen/_15sdp"
+                android:textSize="@dimen/_5sdp"
+                android:singleLine="true"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:ignore="HardcodedText"
-                tools:targetApi="p" />
+                tools:targetApi="p"/>
 
 
             <LinearLayout
@@ -194,3 +195,4 @@
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
