--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main"
@@ -104,7 +105,7 @@
 
 
         <EditText
-            android:id="@+id/user"
+            android:id="@+id/etUser"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_46sdp"
             android:layout_marginStart="@dimen/_22sdp"
@@ -146,9 +147,9 @@
             android:textColorHint="#617D8FAB"
             android:textSize="@dimen/_15sdp"
             android:visibility="visible"
-            app:layout_constraintEnd_toEndOf="@+id/user"
-            app:layout_constraintStart_toStartOf="@+id/user"
-            app:layout_constraintTop_toBottomOf="@+id/user"
+            app:layout_constraintEnd_toEndOf="@+id/etUser"
+            app:layout_constraintStart_toStartOf="@+id/etUser"
+            app:layout_constraintTop_toBottomOf="@+id/etUser"
             tools:ignore="Autofill,HardcodedText" />
 
         <ImageView
@@ -221,7 +222,7 @@
             tools:ignore="HardcodedText" />
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/forgotPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="true"
@@ -251,7 +252,7 @@
             app:layout_constraintTop_toBottomOf="@+id/cbSignin" />
 
         <Button
-            android:id="@+id/btn_signup"
+            android:id="@+id/signupBtn"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_46sdp"
             android:layout_marginStart="@dimen/_22sdp"
@@ -273,3 +274,4 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
