--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -116,6 +116,7 @@
             android:drawablePadding="@dimen/_9sdp"
             android:ems="10"
             android:hint="@string/username_hint"
+            android:text="Gajera Maulik"
             android:inputType="textPersonName"
             android:padding="@dimen/_2sdp"
             android:paddingStart="@dimen/_14sdp"
@@ -137,6 +138,7 @@
             android:background="@drawable/custom_backgroud_edittext"
             android:drawableStart="@drawable/password"
             android:drawablePadding="@dimen/_9sdp"
+            android:text="Maulik@123"
             android:ems="10"
             android:hint="Password"
             android:inputType="textPassword"
