--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -116,7 +116,7 @@
             android:drawablePadding="@dimen/_9sdp"
             android:ems="10"
             android:hint="@string/username_hint"
-            android:text="Gajera Maulik"
+            android:text="mgmaulik14@gmail.com"
             android:inputType="textPersonName"
             android:padding="@dimen/_2sdp"
             android:paddingStart="@dimen/_14sdp"
